# engine11

./: .clang-format  .gitignore  CMakeLists.txt  README.md  fmt.sh  justfile
apps/demo/: CMakeLists.txt
apps/demo/src/: main.cpp
cmake/: CompileShader.cmake
include/: dl-shim.h  error.h  fs-shim.h  glm.h  mem_arena.h
include/asset-bundler/: format.h  importer.h  model.h  output_bundle.h  texture_process_jobs.h  texture_processor.h
include/egg/: app.h  bundle.h  components.h  components_gui.h  shared_library_reloader.h
include/egg/input/: camera_interaction_models.h  input_distributor.h  model.h
include/egg/renderer/: frame_renderer.h  imgui_renderer.h  memory.h  renderer.h  renderer_shared.h  scene_renderer.h
include/egg/renderer/algorithms/: forward.h
include/egg/renderer/core/: device.h  frame_renderer.h  swap_chain.h
include/shaders/: pbr_brdf.h  scene_data.h  vertex.h
src/: main.cpp
src/asset-bundler/: CMakeLists.txt  base_process_job.cpp  diffuse_irradiance_map.comp  envmap_process_job.cpp  importer.cpp  main.cpp  output_bundle.cpp  shader_common.h  skybox.comp  texture_process_job.cpp  texture_processor.cpp
src/egg/: CMakeLists.txt  app.cpp  bundle.cpp  components.cpp  main.cpp  shared_library_reloader.cpp
src/egg/input/: camera_interaction_models.cpp  input_distributor.cpp
src/egg/renderer/: gpu_static_scene_data.cpp  imgui_renderer.cpp  memory.cpp  renderer.cpp  scene_renderer.cpp
src/egg/renderer/algorithms/forward/: CMakeLists.txt  forward.cpp  forward.frag  forward.vert  shared.cpp  skybox.frag  skybox.vert
src/egg/renderer/core/: device.cpp  frame_renderer.cpp  swap_chain.cpp
src/renderer/: frame_renderer.cpp  imgui_renderer.cpp  renderer.cpp  scene_renderer.cpp
src/renderer/core/: device.cpp  frame_renderer.cpp  swap_chain.cpp
